--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body{
 
 @layer base{
     .active_btn{
-      @apply border border-lime-400 p-2 px-4 rounded-sm
+      @apply border border-lime-400 p-1.5 px-4 rounded-sm
     }
+    .valid_input{
+      @apply border-red-500! outline-0! outline-red-500!
+    }
+  
 }
