--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
-*{
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
+* {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
 }
-button{
-    cursor: pointer;
+button {
+  cursor: pointer;
 }
 .height-too-much {
   min-height: 100vh; /* too big when card only one */
