--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,14 @@
 @import "tailwindcss";
 
-body{
+body {
   background-color: #ebeef3;
 }
 
-@layer base{
-    .active_btn{
-      @apply border border-lime-400 p-1.5 px-4 rounded-sm
-    }
-    .valid_input{
-      @apply border-red-500! outline-0! outline-red-500!
-    }
-  
+@layer base {
+  .active_btn {
+    @apply border border-lime-400 p-1.5 px-4 rounded-sm;
+  }
+  .valid_input {
+    @apply border-red-500! outline-0! outline-red-500!;
+  }
 }
